# GamesmanNova

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  bench.py  rust-toolchain  rust-toolchain.toml  rustfmt.toml  tmp.txt
.github/workflows/: push.yml  push_branch.yml  push_main.yml  rust.yml  verification.yml  verify.yml
core/src/: archetypes.rs  lib.rs
core/src/analyzers/: mod.rs
core/src/archetypes/: mod.rs
core/src/databases/: bpdb.rs  mod.rs
core/src/solvers/: acyclic.rs  cyclic.rs  example.rs  mod.rs  tiered.rs  tree.rs
games/: Cargo.toml
games/src/: lib.rs  utils.rs
games/src/example/: mod.rs
games/src/ten_to_zero_by_one_or_two/: mod.rs
games/src/zero_by/: mod.rs
get-session/: Cargo.toml
get-session/src/: lib.rs
interfaces/: Cargo.toml
interfaces/src/: lib.rs
interfaces/src/command/: mod.rs
interfaces/src/terminal/: cli.rs  mod.rs
list-mod/: Cargo.toml  README.md
list-mod/src/: lib.rs
list-modules/src/: lib.rs
nova/: Cargo.toml
nova/src/: errors.rs  main.rs  models.rs  solving.rs  utils.rs
nova/src/core/: mod.rs
nova/src/core/databases/: bpdb.rs  mod.rs  stream_db.rs  streamdb.rs
nova/src/core/databases/database_engine/: engine.rs  mod.rs  page.rs
nova/src/core/solvers/: acyclic.rs  mod.rs  tiered.rs  tree.rs
nova/src/database/: mod.rs
nova/src/databases/: bpdb.rs  mod.rs
nova/src/errors/: implementation.rs  mod.rs  user.rs
nova/src/execution/: listing.rs  solving.rs
nova/src/games/: mod.rs
nova/src/games/zero_by/: mod.rs  utils.rs  variants.rs
nova/src/handling/: mod.rs  solving.rs
nova/src/interfaces/: mod.rs
nova/src/interfaces/terminal/: cli.rs
nova/src/operations/: informing.rs  listing.rs  mod.rs  solving.rs
nova/src/solvers/: acyclic.rs  cyclic.rs  mod.rs  tier.rs  tree.rs
proc-macros/get-session/: Cargo.toml
proc-macros/get-session/src/: lib.rs
proc-macros/list-modules/: Cargo.toml
proc-macros/list-modules/src/: lib.rs
sled_db/: db
src/: errors.rs  main.rs  model.rs  models.rs  test.rs  util.rs  utils.rs
src/analyzers/: mod.rs
src/core/: mod.rs
src/core/databases/: bpdb.rs  mod.rs
src/core/solvers/: acyclic.rs  example.rs  mod.rs  tree.rs
src/database/: bpdb.rs  error.rs  mod.rs  model.rs  record.rs  test.rs  util.rs
src/database/bplus/: mod.rs
src/database/bplus/index/: error.rs  mod.rs  page.rs  page_manager.rs  tree.rs
src/database/bplus/tree/: api.rs  error.rs
src/database/engine/: mod.rs  sled.rs
src/database/engine/lsmt/: mod.rs
src/database/engine/simple/: mod.rs
src/database/engine/volatile/: mod.rs
src/database/engine/volatile_vector/: mod.rs
src/database/lsmt/: mod.rs
src/database/object/: mod.rs  record.rs  schema.rs  table.rs
src/database/record/: dir.rs  dtr.rs  mur.rs  rem.rs  sur.rs
src/database/simple/: mod.rs
src/database/vector/: mod.rs
src/database/volatile/: error.rs  mod.rs
src/database/volatile/resource/: manager.rs  mod.rs
src/database/volatile/transaction/: manager.rs  mod.rs
src/execution/: inform.rs  informing.rs  mod.rs  solve.rs  solving.rs
src/game/: error.rs  mod.rs  model.rs  test.rs  util.rs  utils.rs
src/game/crossteaser/: mod.rs  states.rs  test.rs  tests.rs  variants.rs
src/game/extensive/: builder.rs  mod.rs  state.rs
src/game/mnk/: features.rs  mod.rs  states.rs  variants.rs
src/game/mock/: builder.rs  example.rs  mod.rs  state.rs
src/game/mock/example/: mod.rs
src/game/mock/example/general_utility/: mod.rs
src/game/mock/example/general_utility/general_sum/: mod.rs
src/game/mock/example/general_utility/zero_sum/: mod.rs
src/game/mock/example/simple_utility/: mod.rs
src/game/mock/example/simple_utility/general_sum/: mod.rs
src/game/mock/example/simple_utility/zero_sum/: mod.rs
src/game/zero_by/: mod.rs  states.rs  variants.rs
src/games/: archetypes.rs  mod.rs  utils.rs
src/games/crossteaser/: mod.rs  variants.rs
src/games/zero_by/: mod.rs  states.rs  utils.rs  variants.rs
src/interface/: cli.rs  error.rs  mod.rs  test.rs  util.rs
src/interface/standard/: cli.rs  mod.rs
src/interface/terminal/: cli.rs  mod.rs
src/interfaces/: mod.rs
src/interfaces/terminal/: cli.rs  mod.rs
src/operations/: solving.rs
src/solver/: db.rs  error.rs  mod.rs  model.rs  stochastic.rs  strong.rs  test.rs  util.rs
src/solver/algorithm/: acyclic.rs
src/solver/algorithm/record/: surcc.rs
src/solver/algorithm/strong/: acyclic.rs  cyclic.rs  puzzle.rs
src/solver/algorithm/weak/: acyclic.rs  cyclic.rs
src/solver/record/: mur.rs  rem.rs  remote.rs  sur.rs  surcc.rs
src/solver/strong/: acyclic.rs
src/solver/weak/: cyclic.rs
src/solvers/: acyclic.rs  strong.rs  weak.rs
~/tmp/sled_db/: db  snap.00000000000006A3
