[package]
name = "gamesman-nova"
version = "0.1.5"
description = "System facilitating the search of extensive-form games."
authors = ["Max Fierro <maxfierro@berkeley.edu>"]
license = "GPL-3.0"
repository = "https://github.com/GamesCrafters/GamesmanNova"
keywords = ["game", "solver", "strong-solver", "research"]
edition = "2021"
readme = "README.md"
exclude = ["/.github", "/dev"]

[[bin]]
path = "src/main.rs"
name = "nova"
bench = true
test = true

[profile.release]
codegen-units = 1
debug = true
lto = "fat"

[dependencies]
clap = { version = "^4", features = ["derive"] }
serde_json = "^1"
exitcode = "^1"
anyhow = "^1"
bitvec = "^1"
regex = "^1"

[dev-dependencies]
strum_macros = "0.26"
petgraph = "^0"
strum = "0.26"
