[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
core = { path = "../core" }
games = { path = "../games" }
interfaces = { path = "../interfaces" }
exitcode = "1.1.2"
strsim = "0.10.0"
serde_json = "1.0"
