[package]
name = "nova"
version = "0.1.0"
edition = "2021"
description = "A centralized system for solving finite, deterministic, complete-information, abstract-strategy games."
license = "	GPL-3.0-or-later"
repository = "https://github.com/GamesCrafters/GamesmanNova"
keywords = ["game", "solver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
exitcode = "1.1.2"
strsim = "0.10.0"
serde_json = "1.0"
dirmod = "0.1.5"
regex = "1"
nalgebra = "^0.32"
list-modules = { path = "../proc-macros/list-modules"}
get-session = { path = "../proc-macros/get-session"}
